모바일 버전 제작중(헤더,풋터)

--- a/app/src/assets/_pc.scss
+++ b/app/src/assets/_pc.scss
@@ -2,6 +2,10 @@
     width: 100%;
     height: auto;
     float: left;
+    display: block;
+}
+.mb{
+    display: none;
 }
 .header{
     width: 100%;
