--- a/app/src/assets/_pc.scss
+++ b/app/src/assets/_pc.scss
@@ -7,6 +7,51 @@
 .mb{
     display: none;
 }
+.pagi_area_num{
+    width: 100%;
+    height: auto;
+    float: left;
+    margin-top: 80px;
+    &>.pagi_list{
+        width: auto;
+        height: 30px;
+        float: left;
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+        &>.item{
+            width: 30px;
+            height: 30px;
+            float: left;
+            margin-right: 10px;
+            border: 1px solid #ccc;
+            border-radius: 50%;
+            box-sizing: border-box;
+            &:last-child{
+                margin-right: 0;
+            }
+            &.on{
+                background-color: #ccc;
+                &>.txt{
+                    color: #fff;
+                }
+            }
+            &>.txt{
+                width: auto;
+                height: auto;
+                float: left;
+                font-size: 12px;
+                line-height: 1;
+                color: #333;
+                position: relative;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%,-50%);
+            }
+        }
+    }
+
+}
 .header{
     width: 100%;
     height: auto;
@@ -1106,51 +1151,6 @@
                                 }
                             }
                         }
-                    }
-                    .pagi_area{
-                        width: 100%;
-                        height: auto;
-                        float: left;
-                        margin-top: 80px;
-                        &>.pagi_list{
-                            width: auto;
-                            height: 30px;
-                            float: left;
-                            position: relative;
-                            left: 50%;
-                            transform: translateX(-50%);
-                            &>.item{
-                                width: 30px;
-                                height: 30px;
-                                float: left;
-                                margin-right: 10px;
-                                border: 1px solid #ccc;
-                                border-radius: 50%;
-                                box-sizing: border-box;
-                                &:last-child{
-                                    margin-right: 0;
-                                }
-                                &.on{
-                                    background-color: #ccc;
-                                    &>.txt{
-                                        color: #fff;
-                                    }
-                                }
-                                &>.txt{
-                                    width: auto;
-                                    height: auto;
-                                    float: left;
-                                    font-size: 12px;
-                                    line-height: 1;
-                                    color: #333;
-                                    position: relative;
-                                    top: 50%;
-                                    left: 50%;
-                                    transform: translate(-50%,-50%);
-                                }
-                            }
-                        }
-
                     }
                 }
             }
@@ -4205,6 +4205,67 @@
                         }
                     }
                 }
+                &>.search_box{
+                    width: 100%;
+                    height: auto;
+                    float: left;
+                    margin-top: 15px;
+                    padding: 10px 0;
+                    box-sizing: border-box;
+                    border-top: 1px solid #ccc;
+                    border-bottom: 1px solid #ccc;
+                    box-sizing: border-box;
+                    &>.select_box_area{
+                        width: calc(50% - 30px);
+                        height: 30px;
+                        float: left;
+                        border: 1px solid #ccc;
+                        box-sizing: border-box;
+                        margin-bottom: 10px;
+                        margin-right: 30px;
+                        &>select{
+                            width: 100%;
+                            height: 100%;
+                            float: left;
+                            border: none;
+                        }
+                    }
+                    &>.input_btn_area{
+                        width: 50%;
+                        height: 30px;
+                        float: left;
+                        &>.input_area{
+                            width: calc(100% - 70px);
+                            height: 100%;
+                            float: left;
+                            border: 1px solid #ccc;
+                            box-sizing: border-box;
+                            &>input{
+                                width: 100%;
+                                height: 100%;
+                                float: left;
+                                border: none;
+                                padding-left: 10px;
+                                box-sizing: border-box;
+                            }
+                        }
+                        &>.btn_area{
+                            width: 60px;
+                            height: 100%;
+                            float: right;
+                            &>.btn{
+                                width: 100%;
+                                height: 100%;
+                                float: left;
+                                background-color: #666;
+                                color: #fff;
+                                font-size: 12px;
+                                border: none;
+                            }
+                        }
+                    }
+    
+                }
                
             }
         }
@@ -4458,6 +4519,88 @@
                                 box-sizing: border-box;
                             }
                         }
+                        &>.list{
+                            width: 100%;
+                            height: auto;
+                            float: left;
+                            &>.item{
+                                width: 100%;
+                                height: auto;
+                                float: left;
+                                padding: 10px 0;
+                                border-top: 1px solid #ccc;
+                                border-bottom: 1px solid #ccc;
+                                box-sizing: border-box;
+                                &>.tit{
+                                    width: 100%;
+                                    height: auto;
+                                    float: left;
+                                    font-size: 14px;
+                                    font-weight: 500;
+                                }
+                                &>.txt{
+                                    width: 100%;
+                                    height: auto;
+                                    float: left;
+                                    font-size: 12px;
+                                }
+                            }
+                        }
+                        &>.btn_area{
+                            width: 100%;
+                            height: auto;
+                            float: left;
+                            margin-top: 10px;
+                            &>.not_auth{
+                                width: 100%;
+                                height: 30px;
+                                float: left;
+                                background-color: #efefef;
+                                &>.txt{
+                                    width: 100%;
+                                    height: 30px;
+                                    float: left;
+                                    padding-left: 10px;
+                                    font-size: 12px;
+                                    line-height: 30px;
+                                    box-sizing: border-box;
+                                }
+                            }
+                            &>.auth{
+                                width: 100%;
+                                height: 30px;
+                                float: left;
+                                &>.input_area{
+                                    width: calc(100% - 40px);
+                                    height: 30px;
+                                    float: left;
+                                    border: 1px solid #ccc;
+                                    box-sizing: border-box;
+                                    &>input{
+                                        width: 100%;
+                                        height: 100%;
+                                        float: left;
+                                        border: none;
+                                        padding-left: 10px;
+                                        box-sizing: border-box;
+                                    }
+                                }
+                                &>.btn_area{
+                                    width: 30px;
+                                    height: 30px;
+                                    border: 1px solid #ccc;
+                                    box-sizing: border-box;
+                                    float: right;
+                                    &>button{
+                                        width: 100%;
+                                        height: 100%;
+                                        float: left;
+                                        border: none;
+                                        font-size: 12px;
+                                    }
+                                }
+                            }
+                        }
                     }
                     &>.next_prev_area{
                         width: 100%;
@@ -4516,8 +4659,6 @@
 
                     }
                 }
-              
-               
             }
         }
     }
