모바일 메인페이지 디비 연동

--- a/app/src/assets/_pc.scss
+++ b/app/src/assets/_pc.scss
@@ -993,12 +993,14 @@
                             width: 100%;
                             height: 100%;
                             float: left;
+                            position: relative;
                             &>.ban_item{
                                 width: 1300px;
                                 height: 100%;
                                 float: left;
                                 display: flex;
                                 justify-content: space-between;
+                                position: absolute;
                                 &>.left_img{
                                     width: 520px;
                                     height: 100%;
