--- a/app/src/assets/_mb.scss
+++ b/app/src/assets/_mb.scss
@@ -110,12 +110,17 @@
                         float: left;
                         background-color: antiquewhite;
                         margin-right: 10px;
+                        cursor: pointer;
                     }
                     &>.logo{
                         width: 100px;
                         height: 20px;
                         float: left;
-                        background-color: aquamarine;
+                        background-color: #efefef;
+                        background-size: contain;
+                        background-position: center;
+                        background-repeat: no-repeat;
+                        cursor: pointer;
                     }
                 }
                 &>.right_side{
@@ -149,6 +154,7 @@
             left: 0;
             z-index: 9;
             background-color: #fff;
+            overflow-y: scroll;
             &>.nav_header{
                 width: 100%;
                 height: 50px;
@@ -167,6 +173,7 @@
                     height: 20px;
                     float: right;
                     background-color: #666;
+                    cursor: pointer;
                 }
             }
             &>.top_segment{
@@ -335,6 +342,10 @@
                                         width: 100%;
                                         height: auto;
                                         float: left;
+                                        margin-bottom: 10px;
+                                        &:last-child{
+                                            margin-bottom: 0;
+                                        }
                                         &>.txt{
                                             width: 100%;
                                             height: auto;
@@ -542,6 +553,7 @@
                         text-align: center;
                         padding: 0 10px;
                         box-sizing: border-box;
+                        cursor: pointer;
                     }
                 }
             }
@@ -559,7 +571,10 @@
                 width: 100%;
                 height: 150px;
                 float: left;
-                background-color: aqua;
+                background-position: center;
+                background-size: contain;
+                background-repeat: no-repeat;
+                background-color: #efefef;
             }
             .footer_nav_area{
                 width: 100%;
@@ -701,19 +716,55 @@
         float: left;
         .img_banner{
             width: 100%;
-            height: 825px;
+            height: 675px;
             float: left;
+            background-color: #efefef;
             position: relative;
-            background-color: aquamarine;
-            &>.pagi_area{
+            .swiper {
                 width: 100%;
-                height: 30px;
+                height: 100%;
+            }
+            .swiper-slide {
+                text-align: center;
+                font-size: 18px;        
+                /* Center slide text vertically */
+                display: -webkit-box;
+                display: -ms-flexbox;
+                display: -webkit-flex;
+                display: flex;
+                -webkit-box-pack: center;
+                -ms-flex-pack: center;
+                -webkit-justify-content: center;
+                justify-content: center;
+                -webkit-box-align: center;
+                -ms-flex-align: center;
+                -webkit-align-items: center;
+                align-items: center;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
+            }
+            .swiper-slide img {
+                display: block;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+            &>.banner_empty{
+                width: 100%;
+                height: 100%;
                 float: left;
-                position: absolute;
-                left: 50%;
-                transform: translateX(-50%);
-                bottom: 30px;
-                background-color: #f39d9d;
+                &>.txt{
+                    width: 100%;
+                    height: auto;
+                    float: left;
+                    text-align: center;
+                    position: relative;
+                    top: 50%;
+                    font-size: 20px;
+                    transform: translateY(-50%);
+                }
+
             }
         }
         .main_banner{
@@ -734,7 +785,10 @@
                         width: 95%;
                         height: 320px;
                         float: left;
-                        background-color: #f39d9d;
+                        background-color: #efefef;
+                        background-size: contain;
+                        background-position: center;
+                        background-repeat: no-repeat;
                     }
                     &>.txt_area{
                         width: 100%;
@@ -860,7 +914,7 @@
                             width: 32%;
                             height: 230px;
                             float: left;
-                            background-color: aquamarine;
+                            background-color: #eee;
                             margin-bottom: 10px;
                         }
                     }
@@ -889,7 +943,7 @@
                                 width: 100%;
                                 height: 350px;
                                 float: left;
-                                background-color: wheat;
+                                background-color: #eee;
                             }
                             &>.txt_area{
                                 width: 100%;
