--- a/app/src/assets/_pc.scss
+++ b/app/src/assets/_pc.scss
@@ -56,13 +56,14 @@
     width: 100%;
     height: auto;
     float: left;
-    padding: 0 50px;
     box-sizing: border-box;
     aside{
         width: 100%;
         height: 50px;
         float: left;
-        background-color: beige;
+        padding: 0 50px;
+        box-sizing: border-box;
+        background-color: #f7f2f2;
         .left_area{
             width: auto;
             height: 100%;
@@ -191,7 +192,8 @@
         width: 100%;
         height: 125px;
         float: left;
-        background-color: cadetblue;
+        padding: 0 50px;
+        box-sizing: border-box;
         .inner_nav{
             width: 100%;
             height: 40px;
@@ -222,7 +224,6 @@
                 position: absolute;
                 left: 50%;;
                 transform: translateX(-50%);
-                background-color: palegreen;
                 .list{
                     width: auto;
                     height: auto;
@@ -262,7 +263,7 @@
                             padding: 10px 0;
                             border-radius: 10px;
                             box-sizing: border-box;
-                            background-color: gainsboro;
+                            background-color: #eee;
                             display: none;
                             &>.list{
                                 width: 100%;
@@ -348,7 +349,7 @@
             width: 100%;
             height: 270px;
             float: left;
-            background-color: #eff;
+            background-color: #fafafa;
             .footer_nav{
                 //width: 1770px;
                 //pc의 반응형 처리 해야 함
@@ -455,12 +456,12 @@
                 width: 450px;
                 height: auto;
                 min-height: 100px;
-                background-color: #eff;
                 float: left;
                 margin-bottom: 60px;
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: contain;
+                cursor: pointer;
                 &:nth-child(3n){
                     margin-right: 0;
                 }
@@ -610,12 +611,12 @@
                 width: 335px;
                 height: auto;
                 min-height: 100px;
-                background-color: #eff;
                 float: left;
                 margin-bottom: 60px;
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: contain;
+                cursor: pointer;
                 &:nth-child(4n){
                     margin-right: 0;
                 }
@@ -813,7 +814,7 @@
             width: 100%;
             height: 520px;
             float: left;
-            background-color: #ececec;
+            background-color: #f7f2f2;
             .center_pos{
                 width: 1400px;
                 height: 370px;
@@ -1133,15 +1134,15 @@
                                 padding: 10px 20px;
                                 box-sizing: border-box;
                                 border-radius: 17.5px;
-                                background-color: #eee;
+                                background-color: #f5f5f5;
                                 margin-right: 10px;
                                 &:last-child{
                                     margin-right: 0;
                                 }
                                 &.on{
-                                    background-color: #f39d9d;
+                                    background-color: #d1a69d;
                                     &>.txt{
-                                        color: #eee;
+                                        color: #fffeec;
                                     }
                                 }
                                 &>.txt{
@@ -1150,7 +1151,7 @@
                                     float: left;
                                     line-height: 15px;
                                     font-size: 14px;
-                                    color: #333;
+                                    color: #d0cdd5;
                                 }
                             }
         
@@ -1217,6 +1218,16 @@
                             }
                         }
                     }
+                    &>.gs_content{
+                        width: 100%;
+                        height: auto;
+                        float: left;
+                        padding: 10px;
+                        box-sizing: border-box;
+                        border: 1px solid #eee;
+                        box-sizing: border-box;
+                        margin-top: 10px;
+                    }
                 }
             }
         }
@@ -1231,7 +1242,7 @@
             width: 100%;
             height: 575px; 
             float: left;
-            background-color: #eee;
+            background-color: #f7f7f7;
             &>.inner{
                 width: 1400px;
                 height: auto;
@@ -1265,7 +1276,54 @@
                         width: 470px;
                         height: 470px;
                         float: left;
-                        background-color: antiquewhite;
+                        .swiper {
+                            width: 100%;
+                            height: 100%;
+                        }
+                        .swiper-slide {
+                            text-align: center;
+                            font-size: 18px;        
+                            /* Center slide text vertically */
+                            display: -webkit-box;
+                            display: -ms-flexbox;
+                            display: -webkit-flex;
+                            display: flex;
+                            -webkit-box-pack: center;
+                            -ms-flex-pack: center;
+                            -webkit-justify-content: center;
+                            justify-content: center;
+                            -webkit-box-align: center;
+                            -ms-flex-align: center;
+                            -webkit-align-items: center;
+                            align-items: center;
+                            background-position: center;
+                            background-repeat: no-repeat;
+                            background-size: cover;
+                        }
+                        .swiper-slide img {
+                            display: block;
+                            width: 100%;
+                            height: 100%;
+                            object-fit: cover;
+                        }
+                        &>.banner_empty{
+                            width: 100%;
+                            height: 100%;
+                            float: left;
+                            border: 1px solid #ececec;
+                            box-sizing: border-box;
+                            &>.txt{
+                                width: 100%;
+                                height: auto;
+                                float: left;
+                                text-align: center;
+                                position: relative;
+                                top: 50%;
+                                font-size: 20px;
+                                transform: translateY(-50%);
+                            }
+            
+                        }
                     }
                     &>.info_txt_area{
                         width: 460px;
@@ -1495,7 +1553,10 @@
                             &>.btn{
                                 height: 100%;
                                 float: left;
-                                background-color: #ccc;
+                                background-color: #fff;
+                                border: 1px solid #ccc;
+                                box-sizing: border-box;
+                                cursor: pointer;
                                 &.wish_btn{
                                     width: 80px;
                                 }
@@ -1504,6 +1565,11 @@
                                 }
                                 &.buy_btn{
                                     width: 275px;
+                                    background-color: #d9cecb;
+                                    border: none;
+                                    &>.txt{
+                                        color: #fff;
+                                    }
                                 }
                                 &>.icon{
                                     width: 30px;
@@ -1616,6 +1682,8 @@
                     left: 50%;
                     transform: translateX(-50%);
                     background-color: #efefef;
+                    padding: 10px;
+                    box-sizing: border-box;
                 }
             }
             &.guide_area{
